Add multi-cluster edge routing: one VPS proxy, N independent clusters
Extends PR #8's single-cluster host-domain routing (§7C) with a
genuinely multi-tenant edge (§7D): one VPS Caddy+Velocity instance
fanning out to N fully independent FoliaNexa clusters (separate mgmt
processes/databases, each over its own WireGuard tunnel peer), so
{admin,play,api}.domain1.com and {admin,play,api}.domain2.com land on
entirely different clusters.

- proxy: FoliaRoutesSyncPlugin now polls a list of independent mgmt
  clusters (ClusterConfig, backward-compatible with the single
  FOLIA_MGMT_URL/FOLIA_MGMT_API_TOKEN shape), qualifies every
  registered server name with its owning cluster (ServerName) so
  same-named worlds across clusters never collide, and merges each
  cluster's own domain map into one lookup (DomainRouteMerger).
  Access-gate approval, the Discord chat bridge, and the ping MOTD are
  all resolved per-cluster from a connection's virtual host. Bedrock
  still can't be routed per-cluster (no SNI in RakNet) and always
  lands on the configured primary cluster.
- deploy/vps: Caddyfile now imports clusters.d/*.caddy instead of a
  single hardcoded admin/api/portal block set; add-cluster.sh
  generates one cluster's site blocks at a time, pointed at that
  cluster's own mgmt upstream, without touching any other cluster's
  file. setup-wireguard.sh --role vps now refuses to add a peer whose
  --allowed-ips overlaps an already-configured peer's, since
  independent operators' home LAN subnets commonly collide.
- docs: PLAN.md §7D, CLAUDE.md, and docs/vps-edge-deployment.md all
  document the multi-cluster shape and what's verified vs. not.

Tests: proxy ./gradlew test — 62 passed (was 35 after cherry-picking
#8). mgmt pytest — 269 passed, unaffected by the merge. Caddyfile +
clusters.d output validated with a real `caddy validate` (2.9.1) for
both the empty-clusters.d default and a real two-cluster example.
setup-wireguard.sh's new overlap check exercised with the same
fake